--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
